--- a/examples/app2/package.json
+++ b/examples/app2/package.json
@@ -16,11 +16,11 @@
     "react-scripts": "5.0.1",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0",
-    "cra-mf": "*"
+    "mf-cra": "*"
   },
   "scripts": {
-    "start": "cra-mf start",
-    "build": "cra-mf build",
+    "start": "mf-cra start",
+    "build": "mf-cra build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
