--- a/examples/redux-store/package.json
+++ b/examples/redux-store/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "example-app2",
+  "name": "example-redux-store",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -11,14 +11,14 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
-    "mf-cra": "*",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.4",
     "react-scripts": "5.0.1",
     "typescript": "^4.4.2",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.0",
+    "mf-cra": "*"
   },
   "scripts": {
     "start": "mf-cra start",
