--- a/packages/mf-cra/package.json
+++ b/packages/mf-cra/package.json
@@ -32,5 +32,8 @@
 	"devDependencies": {
 		"rimraf": "^3.0.2",
 		"typescript": "^4.9.4"
+	},
+	"dependencies": {
+		"@module-federation/typescript": "^2.0.3"
 	}
 }
